# TodoPython

./: README.md  pyproject.toml
config/: settings.py  urls.py
theme/static_src/: tailwind.config.js
todo/: models.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_todo_options_remove_todo_title_todo_task_and_more.py  0003_alter_todo_task_alter_todo_user.py  0004_list_todo_list.py
todo/models/: list_model.py  todo_model.py
todo/templates/: home.html  todo.html
todo/views/: __init__.py  auth_views.py  list_views.py  todo_views.py
