[tool.poetry]
name = "todopython"
version = "0.1.0"
description = "this is a todo app"
authors = ["Florin12er <apetreiflorin236@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
django-tailwind = "^3.8.0"
django-browser-reload = "^1.13.0"
authlib = "^1.3.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
